# MyFrame

./: .gitignore
ExcelParser/project/: ExcelParser.sln
ExcelParser/src/code/: ExcelParseMgr.cpp  ExcelParseMgr.h  ExcelParser.aps  ExcelParser.cpp  ExcelParser.rc  ExcelParser.vcxproj  ExcelParser.vcxproj.filters  ExcelParserDlg.cpp  ExcelParserDlg.h  FilePathMgr.cpp  FilePathMgr.h  GameResource.proto  LogMgr.cpp  LogMgr.h  XmlMgr.cpp  XmlMgr.h  resource.h  stdafx.cpp
Server/Project/: GameServer.vcxproj  GameServer.vcxproj.filters  GatewayServer.filters  GatewayServer.vcxproj  GatewayServer.vcxproj.filters  MePlay.vcxproj  MePlay.vcxproj.filters  Project.sln  StatsServer.vcxproj  StatsServer.vcxproj.filters  SuperServer.vcxproj  SuperServer.vcxproj.filters
Server/common/command/: Gate2Game.proto  Gate2Super.proto  MPDefine.proto  MPMsgBase.proto  UserBase.proto  UserErrCode.proto  UserMsgDefine.proto  test.proto
Server/common/dbstruct/: DBGameServer.proto  DBGameUser.proto
Server/fakeclient/: FCManagerModuleDefine.h  FCManagerModuleEnum.h  FCNetProxy.cpp  FCNetProxy.h  FakeClient.cpp  FakeClient.sln  FakeClient.vcxproj  FakeClient.vcxproj.filters  TestManager.cpp  TestManager.h
Server/lib/static/: bson-static-1.0.lib  bsoncxx-static.lib  enet.lib  libbsoncxx.lib  libevent.lib  libevent_core.lib
Server/scripts_linux/: find.sh  make_pb.sh  make_server.sh  run_server.sh  show_server.sh  stop_server.sh  svn_up.sh
Server/scripts_windows/: command.bat  run.bat
Server/src/base/: CommDef.h  ManagerModule.cpp  ManagerModule.h  ManagerModuleManager.cpp  ManagerModuleManager.h  ModuleRefresh.cpp  ModuleRefresh.h  ModuleRely.cpp  ModuleRely.h  ModuleTimeTick.cpp  ModuleTimeTick.h  NetProxy.cpp  NetProxy.h  NetProxyBuffer.cpp  NetProxyBuffer.h  TimeManager.cpp  TimeManager.h  TimeT.h  TimeTick.cpp  TimeTick.h  XmlManager.cpp  XmlManager.h
Server/src/dbproto/: DBGameServer.pb.cc  DBGameServer.pb.h  DBGameUser.pb.cc  DBGameUser.pb.h
Server/src/gameserver/: BattleBase.h  BattleManager.h  CMakeLists.txt  DBManager.cpp  DBManager.h  GameCommDef.h  GameManagerModuleDefine.cpp  GameManagerModuleDefine.h  GameNetProxy.cpp  GameNetProxy.h  GameTimeManager.cpp  GameTimeManager.h  GameUser.cpp  GameUser.h  GameUserManager.cpp  GameUserManager.h  GateServer.cpp  GateServer.h  GateServerManager.cpp  GateServerManager.h  Mail.h  MailManager.cpp  MailManager.h  RefreshManager.cpp  RefreshManager.h  RefreshT.h  StatsServer.cpp  StatsServer.h  StatsServerManager.cpp  StatsServerManager.h  SuperServer.cpp  SuperServer.h  SuperServerManager.cpp  SuperServerManager.h  TimeStampManager.cpp  TimeStampManager.h  UserBase.cpp  UserBase.h  UserModule.h  UserModuleDefine.cpp  (+5 more)
Server/src/gatewayserver/: CMakeLists.txt  GameServer.cpp  GameServer.h  GameServerManager.cpp  GameServerManager.h  GateTimeManager.cpp  GateTimeManager.h  GateUser.cpp  GateUser.h  GateUserManager.cpp  GateUserManager.h  GatewayCommDef.h  GatewayManagerModuleDefine.h  GatewayManagerModuleEnum.h  GatewayNetProxy.cpp  GatewayNetProxy.h  SuperServer.cpp  SuperServerManager.cpp  SuperServerManager.h  main.cpp
Server/src/meplay/: CMakeLists.txt
Server/src/meplay/evpp/: buffer.cc  buffer.h  conn.cc  conn.h  conn_pool.cc  conn_pool.h  connector.cc  connector.h  context.cc  context.h  dns_resolver.cc  dns_resolver.h  duration.cc  duration.h  easylogging++.h  event_loop.cc  event_loop.h  event_loop_thread.cc  event_loop_thread.h  event_loop_thread_pool.cc  event_loop_thread_pool.h  event_watcher.cc  fd_channel.cc  gettimeofday.h  http_server.cc  http_server.h  inner_pre.cc  invoke_timer.cc  invoke_timer.h  libevent.cc  listener.cc  listener.h  logging.h  request.cc  request.h  response.cc  response.h  server_status.h  service.cc  service.h  (+20 more)
Server/src/meplay/include/: DBClient.h  DBClientMgr.h  MPArgs.h  MPAutoRegister.h  MPDump.h  MPGUID.h  MPHttpClient.h  MPLogger.h  MPLogo.h  MPMemoryPool.h  MPModule.h  MPModuleFactory.h  MPMsg.h  MPNet.h  MPNetDefine.h  MPNetObject.h  MPRUDPClient.h  MPRUDPServer.h  MPRandom.h  MPSingleton.h  MPTCPClient.h  MPTCPServer.h  MPThread.h  MPThreadPool.h  MPTime.h  MPTimeTester.h  MPUDPServer.h  easylogging++.h  termcolor.hpp
Server/src/meplay/src/: DBClient.cpp  DBClientMgr.cpp  MPArgs.cpp  MPGUID.cpp  MPHttpClient.cpp  MPLogger.cpp  MPLogo.cpp  MPModule.cpp  MPModuleFactory.cpp  MPNet.cpp  MPNetObject.cpp  MPRUDPClient.cpp  MPRUDPServer.cpp  MPRandom.cpp  MPTCPClient.cpp  MPTCPServer.cpp  MPThread.cpp  MPThreadPool.cpp  MPTime.cpp  MPTimeTester.cpp  MPUDPServer.cpp
Server/src/netproto/: Gate2Game.pb.cc  Gate2Game.pb.h  Gate2Super.pb.cc  Gate2Super.pb.h  MPDefine.pb.cc  MPDefine.pb.h  MPMsgBase.pb.cc  MPMsgBase.pb.h  UserBase.pb.cc  UserBase.pb.h  UserErrCode.pb.cc  UserErrCode.pb.h  UserMsgDefine.pb.cc  UserMsgDefine.pb.h  test.pb.cc  test.pb.h
Server/src/statisticserver/: CMakeLists.txt  RocketMQManager.cpp  RocketMQManager.h  StatsCommDef.h  StatsManagerModuleDefine.h  StatsManagerModuleEnum.h  StatsNetProxy.cpp  StatsNetProxy.h  StatsTimeManager.cpp  StatsTimeManager.h  main.cpp
Server/src/superserver/: CMakeLists.txt  CenterServerManager.cpp  CenterServerManager.h  GameServer.cpp  GameServer.h  GameServerManager.cpp  GameServerManager.h  GateServer.cpp  GateServer.h  GateServerManager.cpp  GateServerManager.h  SuperCommDef.h  SuperManagerModuleDefine.h  SuperManagerModuleEnum.h  SuperNetProxy.cpp  SuperNetProxy.h  SuperTimeManager.cpp  SuperTimeManager.h  TimeT.h  main.cpp  tester.cpp  tester.h
Server/src/test/: SuperCommDef.h  SuperManagerModuleDefine.h  SuperManagerModuleEnum.h  SuperNetProxy.cpp  SuperNetProxy.h  TMManager.cpp  TMManager.h  main.cpp  tester.cpp  tester.h
Server/tools/: ViEmuVS.rar
project/: project.sln
project/ExcelParser/: ExcelParser.aps  ExcelParser.h  ExcelParser.rc  ExcelParser.vcxproj  ExcelParser.vcxproj.filters  ExcelParserDlg.cpp  ExcelParserDlg.h  ReadMe.txt  Resource.h
project/ExcelParser/res/: ExcelParser.rc2
